--- a/debian/control
+++ b/debian/control
@@ -1,16 +1,19 @@
 Source: efreet
-Section: libs
+Section: gui
 Priority: optional
-Maintainer: Falko Schmidt <falko@alphagemini.org>
-Build-Depends: debhelper (>= 6), cdbs, libecore-dev, doxygen
+Maintainer: Alexander Kerner <lunohod@openinkpot.org>
+Build-Depends: debhelper (>= 6), cdbs, libecore-dev
 Standards-Version: 3.7.3
 Homepage: http://www.enlightenment.org
+XCS-Cross-Host-Build-Depends: debhelper (>= 5), cdbs
+XCS-Cross-Build-Depends: libecore-dev
+XS-Vcs-Git: http://git.openinkpot.org/efreet.git
+XS-Vcs-Browser: http://git.openinkpot.org/efreet.git
 
 Package: libefreet0
 Architecture: any
 Depends: ${shlibs:Depends}
 Provides: libefreet
-Recommends: menu-xdg
 Description: Library that implements freedesktop.org specs for use with E17/EFL
  An implementation of several specifications from freedesktop.org intended for
  use in Enlightenment DR17 (e17) and other applications using the Enlightenment
@@ -40,20 +43,3 @@ Description: Development files for libefreet and libefreet-mime
   - Menu
  .
  This packages contains headers and static libraries for Efreet.
-
-Package: libefreet-doc
-Section: doc
-Architecture: any
-Provides: libefreet0-doc
-Description: libefreet and libfreet-mime API documentation
- An implementation of several specifications from freedesktop.org intended for
- use in Enlightenment DR17 (e17) and other applications using the Enlightenment
- Foundation Libraries (EFL). Currently, the following specifications are
- included:
-  - Base Directory
-  - Desktop Entry
-  - Icon Theme
-  - Menu
- .
- This package contains HTML documentation for development with libefreet and
- libefreet-mime.
