--- a/debian/rules
+++ b/debian/rules
@@ -4,7 +4,11 @@ include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
 include /usr/share/cdbs/1/rules/simple-patchsys.mk
 
-DEB_CONFIGURE_EXTRA_FLAGS := --disable-rpath --host=$(DEB_HOST_GNU_TYPE)
+DEB_CONFIGURE_EXTRA_FLAGS := --disable-rpath \
+	--enable-hidden-visibility \
+	--disable-doc \
+	--host=$(DEB_HOST_GNU_TYPE)
+
 DEB_CONFIGURE_SCRIPT := ./autogen.sh
 DEB_MAKE_CLEAN_TARGET := distclean
 CFLAGS += -fvisibility=hidden
